== Version 2.4.14 Work in progress (not released -- this is a draft) ==

    TODO: recompile .mo (creme_config)

  Users side :
  ------------
    # Some validation issues with bulk-edition have been fixed.
      It could be observed when editing several Invoices at once for example.
    # There were permissions issues with EntityFilters & HeaderFilters ;
      public filters could be edited/deleted by users with no app permission.
    # Apps :
        * Billing :
            -  The button to delete Payment Information (on Organisations' detail-views) was broken.
        * Reports :
            - The date filter in the download popup was broken.
        * Mobile :
            - A hard-coded URL pattern has been fixed (to use the reverse pattern matching as usual).


== Version 2.4.13 ==

  Users side :
  ------------
    # There were several issues with fields configured as required.
      It could notably appeared in quick forms:
        - Fields which were added (because they are not in the default forms) cause a validation error.
        - Fields corresponding to a ForeignKey caused an error 500.
    # The block which displays all relationships, & the configurable blocks related to
      one type of relationship, have been fixed to order more correctly entities.
      It fixes some pagination issues with PostgreSQL.
    # Several issues in the detail-view for property type have been fixed :
        - Global buttons were missing (to go to the configuration page & to create a new type).
        - The credentials for the buttons are now correct.
        - Disabled buttons are not clickable anymore, & their style has been improved.
    # Apps :
        * Activities :
            - In "My settings", the brick with Calendars is not displayed at all
              for users which cannot access to the app "Activities".
        * Billing :
            - The lib 'xhtml2pdf' has been upgraded to the version '0.2.11'.
        * Emails :