@@ -4,6 +4,7 @@
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+    <meta name="robots" content="noindex">
 {#    <title>{% block page_title %}{% endblock %}Creme CRM</title> #}
     <title>{% block page_title %}{% endblock %}{{SOFTWARE_LABEL}}</title>
     <script type='text/javascript'>
