@@ -6,6 +6,7 @@
     <head>
         <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+        <meta name="robots" content="noindex">
         <title>{% block page_title %}{% endblock %}Creme CRM</title>
         <script type='text/javascript'>
             window.THEME_NAME = "{{THEME_NAME}}";
